# CmakeHelloWorld

./: CMakeLists.txt  HelloWorld.cpp
